Cheque Module Done

--- a/KGERP/Views/ChequeRegister/ChequeGenerate.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeGenerate.cshtml
@@ -159,7 +159,7 @@
                                                             <a class="btn btn-xs btn-primary text-center hidden" id="hideToShowPrint_@item.ChequeRegisterId" target="_blank" href="~/Report/ChequeRegisterPrinting?chequeRegisterId=@item.ChequeRegisterId" onclick="ChequePrintCount('@item.ChequeRegisterId')">
                                                                 <i class="fa fa-print"></i> Print Here
                                                             </a>
-                                                            <small class="text-center text-gray d-block hidden" id="showToHidePrint_@item.ChequeRegisterId">Unavailable</small>
+                                                            <small class="text-center text-gray d-block" id="showToHidePrint_@item.ChequeRegisterId">Unavailable</small>
                                                         }
                                                     </td>
 
@@ -220,7 +220,7 @@
                                                             <a class="btn btn-xs btn-primary text-center hidden" id="hideToShowPrint_@item.ChequeRegisterId" target="_blank" href="~/Report/ChequeRegisterPrinting?chequeRegisterId=@item.ChequeRegisterId" onclick="ChequePrintCount('@item.ChequeRegisterId')">
                                                                 <i class="fa fa-print"></i> Print
                                                             </a>
-                                                            <small class="text-center text-gray d-block hidden" id="showToHidePrint_@item.ChequeRegisterId">Unavailable</small>
+                                                            <small class="text-center text-secondary d-block" id="showToHidePrint_@item.ChequeRegisterId">Unavailable</small>
                                                         }
                                                     </td>
                                                 </tr>
@@ -296,7 +296,7 @@
         function ChequePrintCount(chequeRegisterId) {
             $.ajax({
                 type: "GET",
-                url: "/ChequeRegister/ChequeSign",
+                url: "/ChequeRegister/ChequePrintCount",
                 dataType: "json",
                 data: { chequeRegisterId: chequeRegisterId },
                 success: function (data) {
